--- a/package.json
+++ b/package.json
@@ -11,29 +11,32 @@
     "start": "ember server",
     "test": "ember try:testall"
   },
-  "repository": "https://github.com/Robdel12/a11y-announcer",
+  "repository": "https://github.com/ember-a11y/a11y-announcer",
   "engines": {
     "node": ">= 0.10.0"
   },
-  "author": "Rober DeLuca",
+  "author": "Robert DeLuca",
   "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.1.2",
-    "ember-cli": "1.13.8",
-    "ember-cli-app-version": "0.5.0",
-    "ember-cli-dependency-checker": "^1.0.1",
     "ember-cli-document-title": "0.2.0",
     "ember-cli-github-pages": "0.0.6",
-    "ember-cli-htmlbars-inline-precompile": "^0.2.0",
-    "ember-cli-ic-ajax": "0.2.1",
+    "broccoli-asset-rev": "^2.2.0",
+    "ember-ajax": "0.7.1",
+    "ember-cli": "2.3.0",
+    "ember-cli-app-version": "^1.0.0",
+    "ember-cli-dependency-checker": "^1.2.0",
+    "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.3.1",
     "ember-cli-mocha": "0.9.2",
-    "ember-cli-release": "0.2.3",
+    "ember-cli-release": "0.2.8",
     "ember-cli-uglify": "^1.2.0",
-    "ember-disable-prototype-extensions": "^1.0.0",
-    "ember-disable-proxy-controllers": "^1.0.0",
-    "ember-export-application-global": "^1.0.3",
-    "ember-try": "0.0.6"
+    "ember-disable-prototype-extensions": "^1.1.0",
+    "ember-disable-proxy-controllers": "^1.0.1",
+    "ember-export-application-global": "^1.0.4",
+    "ember-load-initializers": "^0.5.0",
+    "ember-resolver": "^2.0.3",
+    "ember-try": "^0.1.2",
+    "loader.js": "^4.0.0"
   },
   "keywords": [
     "ember-addon",
@@ -42,11 +45,11 @@
     "a11y-announcer"
   ],
   "dependencies": {
-    "ember-cli-htmlbars": "0.7.9",
-    "ember-cli-babel": "^5.1.3"
+    "ember-cli-htmlbars": "^1.0.1",
+    "ember-cli-babel": "^5.1.5"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
-    "demoURL": "http://robdel12.github.io/a11y-announcer"
+    "demoURL": "http://ember-a11y.github.io/a11y-announcer"
   }
 }
