--- a/package.json
+++ b/package.json
@@ -2,33 +2,40 @@
   "name": "a11y-announcer",
   "version": "1.0.2",
   "description": "An accessible ember route change announcer",
+  "keywords": [
+    "ember-addon",
+    "ember accessibility",
+    "ember router",
+    "a11y-announcer"
+  ],
+  "license": "MIT",
+  "author": "Robert DeLuca",
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
+  "repository": "https://github.com/ember-a11y/a11y-announcer",
   "scripts": {
     "build": "ember build",
     "start": "ember server",
     "test": "ember try:each"
   },
-  "repository": "https://github.com/ember-a11y/a11y-announcer",
-  "engines": {
-    "node": ">= 0.10.0"
+  "dependencies": {
+    "ember-cli-babel": "^5.1.7",
+    "ember-cli-htmlbars": "^1.0.10"
   },
-  "author": "Robert DeLuca",
-  "license": "MIT",
   "devDependencies": {
-    "ember-cli-document-title": "0.2.0",
-    "ember-cli-github-pages": "0.0.6",
-    "broccoli-asset-rev": "^2.4.2",
-    "ember-ajax": "^2.0.1",
-    "ember-cli": "2.7.0",
-    "ember-cli-app-version": "^1.0.0",
-    "ember-cli-dependency-checker": "^1.2.0",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.1",
+    "broccoli-asset-rev": "^2.4.5",
+    "ember-ajax": "^2.4.1",
+    "ember-cli": "2.10.0",
+    "ember-cli-app-version": "^2.0.0",
+    "ember-cli-dependency-checker": "^1.3.0",
+    "ember-cli-document-title": "0.3.2",
+    "ember-cli-github-pages": "0.1.2",
+    "ember-cli-htmlbars-inline-precompile": "^0.3.3",
+    "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-jshint": "^2.0.1",
     "ember-cli-mocha": "0.10.4",
-    "ember-cli-inject-live-reload": "^1.4.0",
-    "ember-cli-jshint": "^1.0.0",
     "ember-cli-release": "^0.2.9",
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
@@ -36,17 +43,10 @@
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
-    "loader.js": "^4.0.1"
+    "loader.js": "^4.0.10"
   },
-  "keywords": [
-    "ember-addon",
-    "ember accessibility",
-    "ember router",
-    "a11y-announcer"
-  ],
-  "dependencies": {
-    "ember-cli-htmlbars": "^1.0.3",
-    "ember-cli-babel": "^5.1.6"
+  "engines": {
+    "node": ">= 0.12.0"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
