--- a/package.json
+++ b/package.json
@@ -2,51 +2,52 @@
   "name": "a11y-announcer",
   "version": "1.0.2",
   "description": "An accessible ember route change announcer",
-  "directories": {
-    "doc": "doc",
-    "test": "tests"
-  },
-  "scripts": {
-    "build": "ember build",
-    "start": "ember server",
-    "test": "ember try:each"
-  },
-  "repository": "https://github.com/ember-a11y/a11y-announcer",
-  "engines": {
-    "node": ">= 0.10.0"
-  },
-  "author": "Robert DeLuca",
-  "license": "MIT",
-  "devDependencies": {
-    "ember-cli-document-title": "0.2.0",
-    "ember-cli-github-pages": "0.0.6",
-    "broccoli-asset-rev": "^2.4.2",
-    "ember-ajax": "^2.0.1",
-    "ember-cli": "2.7.0",
-    "ember-cli-app-version": "^1.0.0",
-    "ember-cli-dependency-checker": "^1.2.0",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.1",
-    "ember-cli-mocha": "0.10.4",
-    "ember-cli-inject-live-reload": "^1.4.0",
-    "ember-cli-jshint": "^1.0.0",
-    "ember-cli-release": "^0.2.9",
-    "ember-cli-test-loader": "^1.1.0",
-    "ember-cli-uglify": "^1.2.0",
-    "ember-disable-prototype-extensions": "^1.1.0",
-    "ember-export-application-global": "^1.0.5",
-    "ember-load-initializers": "^0.5.1",
-    "ember-resolver": "^2.0.3",
-    "loader.js": "^4.0.1"
-  },
   "keywords": [
     "ember-addon",
     "ember accessibility",
     "ember router",
     "a11y-announcer"
   ],
+  "license": "MIT",
+  "author": "Robert DeLuca",
+  "directories": {
+    "doc": "doc",
+    "test": "tests"
+  },
+  "repository": "https://github.com/ember-a11y/a11y-announcer",
+  "scripts": {
+    "build": "ember build",
+    "start": "ember serve",
+    "test": "ember try:each"
+  },
   "dependencies": {
-    "ember-cli-htmlbars": "^1.0.3",
-    "ember-cli-babel": "^5.1.6"
+    "ember-cli-babel": "^6.6.0",
+    "ember-cli-htmlbars": "^2.0.1"
+  },
+  "devDependencies": {
+    "broccoli-asset-rev": "^2.4.5",
+    "ember-ajax": "^3.0.0",
+    "ember-cli": "~2.17.0",
+    "ember-cli-chai": "^0.4.0",
+    "ember-cli-dependency-checker": "^2.0.0",
+    "ember-cli-document-title": "0.3.2",
+    "ember-cli-eslint": "^4.2.1",
+    "ember-cli-github-pages": "0.1.2",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.0",
+    "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-mocha": "^0.14.4",
+    "ember-cli-release": "^0.2.9",
+    "ember-cli-shims": "^1.2.0",
+    "ember-cli-uglify": "^2.0.0",
+    "ember-disable-prototype-extensions": "^1.1.2",
+    "ember-export-application-global": "^2.0.0",
+    "ember-load-initializers": "^1.0.0",
+    "ember-resolver": "^4.0.0",
+    "ember-source": "~2.17.0",
+    "loader.js": "^4.2.3"
+  },
+  "engines": {
+    "node": "^4.5 || 6.* || >= 7.*"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
