--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "ember-addon",
     "ember accessibility",
     "ember router",
-    "a11y-announcer"
+    "a11y-announcer",
+    "a11y",
+    "accessibility"
   ],
   "license": "MIT",
   "author": "Robert DeLuca",
@@ -17,6 +19,7 @@
   "repository": "https://github.com/ember-a11y/a11y-announcer",
   "scripts": {
     "build": "ember build",
+    "lint:js": "eslint ./*.js addon addon-test-support app config lib server test-support tests",
     "start": "ember serve",
     "test": "ember try:each"
   },
@@ -27,24 +30,29 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^3.0.0",
-    "ember-cli": "~2.17.0",
-    "ember-cli-chai": "^0.4.0",
+    "ember-cli": "~3.0.2",
     "ember-cli-dependency-checker": "^2.0.0",
-    "ember-cli-document-title": "0.3.2",
+    "ember-cli-document-title": "0.4.0",
     "ember-cli-eslint": "^4.2.1",
-    "ember-cli-github-pages": "0.1.2",
+    "ember-cli-github-pages": "0.2.0",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
-    "ember-cli-mocha": "^0.14.4",
-    "ember-cli-release": "^0.2.9",
+    "ember-cli-qunit": "4.3.2",
+    "ember-cli-release": "^1.0.0-beta.2",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-uglify": "^2.0.0",
     "ember-disable-prototype-extensions": "^1.1.2",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
+    "ember-maybe-import-regenerator": "^0.1.6",
     "ember-resolver": "^4.0.0",
-    "ember-source": "~2.17.0",
-    "loader.js": "^4.2.3"
+    "ember-source": "~3.0.0",
+    "ember-source-channel-url": "^1.0.1",
+    "ember-try": "^0.2.23",
+    "eslint-plugin-ember": "^5.0.0",
+    "eslint-plugin-node": "^6.0.1",
+    "loader.js": "^4.2.3",
+    "qunit-dom": "0.6.0"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
