--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ember-cli-release": "^1.0.0-beta.2",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-uglify": "^2.0.0",
+    "ember-cli-update": "^0.54.6",
     "ember-disable-prototype-extensions": "^1.1.2",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
